adding certificate updates to ingress service typo

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   tls:
     - hosts:
-        - charles.stolz.com
+        - charlesstolz.com
         - www.charlesstolz.com
       secretName: charlesstolz-com
 
