--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
-    kubernetes.io/ingress.class: 'nginx'
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: 'letsencrypt-prod'
@@ -15,10 +15,9 @@ spec:
         - charlesstolz.com
         - www.charlesstolz.com
       secretName: charlesstolz-com
-
   rules:
     - host: charlesstolz.com
-    - http:
+      http:
         paths:
           - path: /?(.*)
             # UPDATE THIS LINE ABOVE
@@ -31,7 +30,7 @@ spec:
               serviceName: server-cluster-ip-service
               servicePort: 5000
     - host: www.charlesstolz.com
-    - http:
+      http:
         paths:
           - path: /?(.*)
             # UPDATE THIS LINE ABOVE
